--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -179,6 +179,6 @@
         <a href="#"><i class="fab fa-twitter"></i></a>
       </div>
     </footer>
-    <script src="js/app.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
