--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -33,8 +33,8 @@
       </div>
     </section>
 
-    <section class="cards" id="Services">
-      <h2 class="title">Services</h2>
+    <section class="cards" id="">
+      <h2 class="title">OliveO - Descovery team</h2>
       <div class="content">
         <div><img src="utils/logo.jpg" alt="logo" /></div>
         <div class="main-logo">
@@ -138,7 +138,8 @@
         <br />
         <img id="imagePreview" src="" alt="upload" />
         <br />
-        <button id="uploadButton" class="button2">Upload Photo</button>
+        <button id="uploadButton" class="button2">Detect The Disease</button>
+        <h3 class="output-result" id="output-result"></h3>
       </dev>
     </section>
     <section class="cards-contact" id="Contact">
