refactor: update detect id

--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -23,7 +23,7 @@
       <div>
         <h2>We here<br /><span>Olive Branch</span></h2>
         <h3>Discover the disease with OliveO-AI</h3>
-        <a href="#" class="main-btn">Explore your tree</a>
+        <a href="#Detect" class="main-btn">Explore your tree</a>
         <div class="social-icons">
           <a href="#"><i class="fab fa-linkedin"></i></a>
           <a href="#"><i class="fab fa-youtube"></i></a>
